--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1398,3 +1398,12 @@ html.dimbg .slide-background {
     background-position: top 50px left 10px;
     opacity: 0.4 !important;
 }
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
