--- a/css/theme/medium.css
+++ b/css/theme/medium.css
@@ -403,9 +403,8 @@ body {
     color: #FF99FF;
 }
 
-.darkgraycenter {
-    color: darkgray;
-    text-align:center;
+.dimtext {
+    color: #888888;
 }
 
 .reveal .slide-number {
