Included other team members feedback.

--- a/css/theme/light.css
+++ b/css/theme/light.css
@@ -407,6 +407,10 @@ body {
     color: #999999;
 }
 
+.reveal .dimtext {
+    color: #999999;
+}
+
 .reveal .slide-number {
     z-index: 0;
     background-color: transparent;
