--- a/css/theme/dark.css
+++ b/css/theme/dark.css
@@ -407,6 +407,10 @@ body {
     color: #777777;
 }
 
+.reveal .dimtext {
+    color: #777777;
+}
+
 .reveal .slide-number {
     z-index: 0;
     background-color: transparent;
