--- a/css/theme/medium.css
+++ b/css/theme/medium.css
@@ -407,6 +407,10 @@ body {
     color: #a7a6b2;
 }
 
+.reveal .dimtext {
+    color: #a7a6b2;
+}
+
 .reveal .slide-number {
     z-index: 0;
     background-color: transparent;
