--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -410,6 +410,10 @@ body {
     color: #999999;
 }
 
+.reveal .dimbg {
+    background-color: #bbbbbb;
+}
+
 .reveal .slide-number {
     z-index: 0;
     background-color: transparent;
