--- a/css/theme/light.css
+++ b/css/theme/light.css
@@ -411,6 +411,10 @@ body {
     color: #999999;
 }
 
+.reveal .dimbg {
+    background-color: #bbbbbb;
+}
+
 .reveal .slide-number {
     z-index: 0;
     background-color: transparent;
